--- a/app/bundles/PluginBundle/Translations/en_US/messages.ini
+++ b/app/bundles/PluginBundle/Translations/en_US/messages.ini
@@ -97,3 +97,4 @@ mautic.plugin.command.pushing.companies="Updating/creating companies from Mautic
 mautic.plugin.command.fetch.pushing.companies.events_executed="Number of companies pushed: %updated% updated, %created% created, %errored% had errors and %ignored% were ignored (likely duplicates or didn't match field criteria)"
 mautic.integrations.update.dnc.by.date="Use latest updated Do Not Contact record"
 mautic.integrations.form.update.dnc.by.date.label="Select this option if you wish to update the Do not contact field by the latest updated on either systems"
+mautic.plugin.extension.shell_exec="Install and enable the <strong>shell_exec</strong> extension."
