--- a/app/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/app/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -407,6 +407,8 @@ mautic.lead.list.filter.device_type="Device Type"
 mautic.lead.list.filter.device_brand="Device Brand"
 mautic.lead.list.filter.device_os="Device OS"
 mautic.lead.list.filter.device_model="Device Model"
+mautic.lead.list.filter.email_clicked_date="Clicked from an email (date)"
+mautic.lead.list.filter.sms_clicked_date="Clicked from a text message (date)"
 mautic.lead.list.form.confirmbatchdelete="Delete the selected segments?"
 mautic.lead.list.form.confirmdelete="Delete the segment, %name%?"
 mautic.lead.list.form.filters.add="Add Filter"
