--- a/app/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/app/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -381,34 +381,35 @@ mautic.lead.list.filter.date_identified="Date Identified"
 mautic.lead.list.filter.dnc_bounced="Bounced - Email"
 mautic.lead.list.filter.dnc_unsubscribed="Unsubscribed - Email"
 mautic.lead.list.filter.last_active="Date Last Active"
-mautic.lead.list.filter.date_modified="Modified date"
 mautic.lead.list.filter.campaign="Campaign Membership"
+mautic.lead.list.filter.date_modified="Modified Date"
 mautic.lead.list.filter.lists="Segment Membership"
-mautic.lead.list.filter.lead_email_received="Email Read"
-mautic.lead.list.filter.lead_email_sent="Email Sent"
-mautic.lead.list.filter.lead_email_sent_date="Email Sent Date"
-mautic.lead.list.filter.lead_email_read_date="Email Read Date"
-mautic.lead.list.filter.lead_email_read_count="Email Read Count"
-mautic.lead.list.filter.visited_url="Visited URL"
-mautic.lead.list.filter.visited_url_count="Visited URL Count"
-mautic.lead.list.filter.url_title="Page title"
-mautic.lead.list.filter.source="Page hit Source"
-mautic.lead.list.filter.source.id="Page hit source ID"
-mautic.lead.list.filter.session="Page sessions"
-mautic.lead.list.filter.redirect_id="URL as redirect"
-mautic.lead.list.filter.email_id="URL from email"
-mautic.lead.list.filter.page_id="URL from landing page"
-mautic.lead.list.filter.referer="Visited URL Referer"
-mautic.lead.list.filter.visited_url_date="Visited URL Date"
-mautic.lead.list.filter.notification="Notifications"
+mautic.lead.list.filter.lead_email_received="Read a specific email"
+mautic.lead.list.filter.lead_email_sent="Was sent a specific email"
+mautic.lead.list.filter.lead_email_sent_date="Date an email was sent"
+mautic.lead.list.filter.lead_email_read_date="Read any email (date)"
+mautic.lead.list.filter.lead_email_read_count="Read any email X number of emails"
+mautic.lead.list.filter.visited_url="Visited X URL"
+mautic.lead.list.filter.visited_url_count="Visited any URL X number of times "
+mautic.lead.list.filter.url_title="Visited any URL with X page title"
+mautic.lead.list.filter.source="Visited any URL from X source"
+mautic.lead.list.filter.source.id="Visited any URL from X source ID "
+mautic.lead.list.filter.session="Has X number of browsing sessions"
+mautic.lead.list.filter.page_id="Visited a specific landing page"
+mautic.lead.list.filter.referer="Visited any URL from X referrer"
+mautic.lead.list.filter.visited_url_date="Visited any URL (date)"
+mautic.lead.list.filter.notification="Has been sent any push notification"
 mautic.lead.list.filter.owner="Owner"
 mautic.lead.list.filter.tags="Tags"
 mautic.lead.list.filter.device_type="Device Type"
 mautic.lead.list.filter.device_brand="Device Brand"
 mautic.lead.list.filter.device_os="Device OS"
 mautic.lead.list.filter.device_model="Device Model"
-mautic.lead.list.filter.email_clicked_date="Clicked from an email (date)"
-mautic.lead.list.filter.sms_clicked_date="Clicked from a text message (date)"
+mautic.lead.list.filter.redirect_id="Clicked any link from any channel"
+mautic.lead.list.filter.email_id="Clicked any link from an email"
+mautic.lead.list.filter.email_clicked_date="Clicked any link from an email (date)"
+mautic.lead.list.filter.sms_clicked="Clicked any link from a text message"
+mautic.lead.list.filter.sms_clicked_date="Clicked any link from a text message (date)"
 mautic.lead.list.form.confirmbatchdelete="Delete the selected segments?"
 mautic.lead.list.form.confirmdelete="Delete the segment, %name%?"
 mautic.lead.list.form.filters.add="Add Filter"
