--- a/app/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/app/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -196,6 +196,7 @@ mautic.lead.import.result="%lines% lines were processed, %created% items created
 mautic.lead.import.failed="Import failed. Reason: %reason%"
 mautic.lead.background.import.if.more.rows.than="Automatically import in the background if the CSV has more rows than defined"
 mautic.lead.background.import.if.more.rows.than.tooltip="If this option is greater than 0, there will be only one Import button and the browser/background import will be decided based on the CSV row number"
+mautic.lead.behaviors="Contact Behavior"
 mautic.config.tab.leadconfig="Contact Settings"
 mautic.config.tab.importconfig="Import Settings"
 mautic.lead.import.database.exception="There was a database error: %message%. The import was set to delayed state and will be imported later."
