--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -311,6 +311,7 @@ mautic.email.send.edit.email.desc="Edit email from here. New window will pop up 
 mautic.email.send.edit.email="Edit Email"
 mautic.email.send.example="Send example"
 mautic.email.send.example.contact="Select contact displayed in the example"
+mautic.email.send.example.placeholder="Find contact"
 mautic.email.send.inprogress="Sending is in progress. Leaving this page will stop the process but may cause contacts to receive duplicate emails when restarted."
 mautic.email.send.instructions="Enter the number of emails to send per batch then click Send to start the process."
 mautic.email.send.list="Send &quot;%name%&quot;"
