made ghost delay and statusay configurable as import_max_runtime and import_max_runtime_status

--- a/app/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/app/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -111,7 +111,6 @@ mautic.lead.field.help.defaultvalue="A default value will only apply to new cont
 mautic.lead.field.menu.index="Custom Fields"
 mautic.lead.field.label="Label"
 mautic.lead.field.linked="LinkedIn"
-mautic.lead.field.menu.index="Custom Fields"
 mautic.lead.field.tooltip.fixed="Cannot be removed (used internally)."
 mautic.lead.field.tooltip.invisible="Does not show in contact forms."
 mautic.lead.field.tooltip.listable="Can be used as a segment filter."
@@ -153,7 +152,6 @@ mautic.lead.import.inprogress="Import is in progress."
 mautic.lead.import.completed="Import completed"
 mautic.lead.import.failed="Import failed"
 mautic.lead.import.result.info="View details of %import%"
-mautic.lead.import.ghost.limit.hit="The import hasn't been updated in %limit% hours by the background job. It's considered failed."
 mautic.lead.import.default.owner="(Optional) Set the owner and the contact segment for the imported contacts."
 mautic.lead.import.donotleave="Please do not leave this page until complete or queued."
 mautic.lead.import.mapped.fields="Mapped fields"
@@ -165,7 +163,6 @@ mautic.lead.special_fields="Properties"
 mautic.lead.import.leads="Import %object%"
 mautic.lead.import.in.background="Import in background"
 mautic.lead.import.delayed="Import has been delayed: %reason%"
-mautic.lead.import.failed="Import failed: %reason%"
 mautic.lead.import.start="Import in browser"
 mautic.lead.import.start.instructions="Upload the CSV file that contains the items to be imported. The next step will be to match the fields in the file with the fields available in Mautic."
 mautic.lead.import.label.stage="Stage"
@@ -190,6 +187,11 @@ mautic.lead.import.result="%lines% lines were processed, %created% items created
 mautic.lead.import.failed="Import failed. Reason: %reason%"
 mautic.lead.background.import.if.more.rows.than="Automatically import in the background if the CSV has more rows than defined"
 mautic.lead.background.import.if.more.rows.than.tooltip="If this option is greater than 0, there will be only one Import button and the browser/background import will be decided based on the CSV row number"
+mautic.lead.import.max.runtime="Maximum import runtime (hours)"
+mautic.lead.import.max.runtime.tooltip="This can be a decimal value (i.e., 0.5 for 30 minutes). Set this value to zero to disable maximum runtime."
+mautic.lead.import.max.runtime.status="Runtime exceeded status."
+mautic.lead.import.max.runtime.status.tooltip="Status to use when an import has has been processing longer than the maximum runtime."
+mautic.lead.import.max.runtime.hit="The import hasn't been updated in %limit% hours by the background job. Status changed to %status%."
 mautic.config.tab.leadconfig="Contact Settings"
 mautic.config.tab.importconfig="Import Settings"
 mautic.lead.import.database.exception="There was a database error: %message%. The import was set to delayed state and will be imported later."
