--- a/app/bundles/SmsBundle/Translations/en_US/messages.ini
+++ b/app/bundles/SmsBundle/Translations/en_US/messages.ini
@@ -98,5 +98,6 @@ mautic.sms.help.searchcommands="<strong>Search commands</strong><br />ids:ID1,ID
 mautic.sms.config.select_default_transport="Select default transport to use"
 mautic.sms.config.no_transport="No transport enabled"
 mautic.sms.config.choose_transport="Select transport"
+mautic.sms.config.smsconfig="Please, install messaging transport first."
 
 mautic.sms.transport.twilio="Twilio"
