--- a/app/bundles/CoreBundle/Translations/en_US/messages.ini
+++ b/app/bundles/CoreBundle/Translations/en_US/messages.ini
@@ -465,6 +465,7 @@ mautic.core.wrapper.background.color="Wrapper Background Color"
 mautic.core.wrapper.background.image="Wrapper Background Image"
 mautic.core.wrapper.background.repeat="Wrapper Background Repeat"
 mautic.core.wrapper.background.size="Wrapper Background Size (width height | 'cover' | 'contain')"
+mautic.core.wrapper.background.position="Wrapper Background Position (horizontal vertical)"
 mautic.core.text.color="Text color"
 mautic.core.slot.types="Slot types"
 mautic.core.section.types="Section types"
