Add background-image to section content

--- a/app/bundles/CoreBundle/Translations/en_US/messages.ini
+++ b/app/bundles/CoreBundle/Translations/en_US/messages.ini
@@ -459,6 +459,10 @@ mautic.core.facebook.url="Facebook URL"
 mautic.core.caption.color="Caption background Color"
 mautic.core.background.color="Background Color"
 mautic.core.content.background.color="Content Background Color"
+mautic.core.content.background.image="Content Background Image"
+mautic.core.content.background.repeat="Content Background Repeat"
+mautic.core.content.background.size="Content Background Size (width height | 'cover' | 'contain')"
+mautic.core.content.background.position="Content Background Position (horizontal vertical)"
 mautic.core.continue="Continue"
 mautic.core.wrapper.background.color="Wrapper Background Color"
 mautic.core.wrapper.background.image="Wrapper Background Image"
