--- a/app/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/app/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -414,6 +414,7 @@ mautic.lead.list.form.isPreferenceCenter.tooltip="Segment can be editable by con
 mautic.lead.list.form.operator.between="between"
 mautic.lead.list.form.operator.equals="equals"
 mautic.lead.list.form.operator.greaterthan="greater than"
+mautic.lead.list.form.operator.notgreaterthan="not exist greater"
 mautic.lead.list.form.operator.greaterthanequals="greater than or equal"
 mautic.lead.list.form.operator.in="including"
 mautic.lead.list.form.operator.isempty="empty"
@@ -423,6 +424,7 @@ mautic.lead.list.form.operator.regexp="regexp"
 mautic.lead.list.form.operator.notregexp="not regexp"
 mautic.lead.list.form.operator.isnotlike="not like"
 mautic.lead.list.form.operator.lessthan="less than"
+mautic.lead.list.form.operator.notlessthan="not exist less than"
 mautic.lead.list.form.operator.lessthanequals="less than or equal"
 mautic.lead.list.form.operator.notbetween="not between"
 mautic.lead.list.form.operator.notequals="not equal"
