--- a/app/bundles/ReportBundle/Translations/en_US/messages.ini
+++ b/app/bundles/ReportBundle/Translations/en_US/messages.ini
@@ -117,5 +117,5 @@ mautic.report.schedule.command.finished="Scheduler has finished"
 mautic.report.schedule.command.invalid_parameter="Parameter report has to be number"
 mautic.report.dashboard.widgets.no_report_found="<strong>Oh snap!</strong> Report has been deleted or no data has been found."
 mautic.config.tab.reportconfig="Report Settings"
-mautic.config.tab.form.csv_always_enclose="Always enclose data in CSV export"
-mautic.config.tab.form.csv_always_enclose.tooltip="Sometimes require CSV export with enclosures data, event  empty columns. For example: &#34;Firstname&#34;,&#34;&#34;,&#34;Lastname&#34;"
+mautic.config.tab.form.csv_always_enclose="Always quote data in CSV export"
+mautic.config.tab.form.csv_always_enclose.tooltip="Enable this if the application used to open the CSV requires values to be quoted with double quotations. For example: &#34;Firstname&#34;,&#34;&#34;,&#34;Lastname&#34;"
