Add create/get activity

--- a/plugins/MauticCrmBundle/Translations/en_US/messages.ini
+++ b/plugins/MauticCrmBundle/Translations/en_US/messages.ini
@@ -72,6 +72,7 @@ mautic.connectwise.form.objects_to_pull_from="Choose modules to pull data from"
 mautic.pipedrive.form.objects_to_pull_from="Enable Mautic / Pipedrive objects integration"
 mautic.pipedrive.object.contacts="Contacts / Person"
 mautic.pipedrive.object.organization="Company / Organization"
+mautic.pipedrive.form.activityEvents="Activities to sync to Pipedrive"
 mautic.pipedrive.api_url="Pipedrive URL"
 mautic.pipedrive.token="Pipedrive Token"
 mautic.pipedrive.webhook_user="Webhook user"
