[export-permission] Permission integrated into leads(contacts) and lists(segments)

--- a/app/bundles/CoreBundle/Translations/en_US/messages.ini
+++ b/app/bundles/CoreBundle/Translations/en_US/messages.ini
@@ -300,6 +300,7 @@ mautic.core.permissions.deleteown="Delete Own"
 mautic.core.permissions.edit="Edit"
 mautic.core.permissions.editother="Edit Others"
 mautic.core.permissions.editown="Edit Own"
+mautic.core.permissions.export="Export"
 mautic.core.permissions.full="Full"
 mautic.core.permissions.manage="Manage"
 mautic.core.permissions.mode.notfound="The mode, %mode% for isGranted() is not recognized."
