--- a/app/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/app/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -724,3 +724,4 @@ mautic.lead.segments.contacts="All contacts"
 mautic.lead.segments.contacts.added="Added"
 mautic.lead.segments.contacts.removed="Removed"
 mautic.channel.stat.leadcount.tooltip="Details may not match summary numbers if the contact no longer exists in Mautic or if a contact was sent the message multiple times"
+mautic.lead.segments.usages="Usages"
