--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -260,7 +260,7 @@ mautic.email.lists.combined="All lists combined"
 mautic.email.no.emails.note="There are no emails to choose from. Create some first."
 mautic.email.open.limittoemails="Limit to these selected emails"
 mautic.email.open.limittoemails_descr="Only apply if the selected emails are opened. If none are selected, any email opened will be applicable."
-mautic.email.open.each="Change points for each separately"
+mautic.email.open.each="Execute for each"
 mautic.email.open.each.tooltip="With this option each item will fire points action. Disable it and points are fired just first t If condition passed."
 mautic.email.permissions.emails="Emails - User has access to"
 mautic.email.permissions.header="Email Permissions"
