--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -260,7 +260,11 @@ mautic.email.lists.combined="All lists combined"
 mautic.email.no.emails.note="There are no emails to choose from. Create some first."
 mautic.email.open.limittoemails="Limit to these selected emails"
 mautic.email.open.limittoemails_descr="Only apply if the selected emails are opened. If none are selected, any email opened will be applicable."
-mautic.email.open.options="Execute only If"
+mautic.email.open.execute="Execute only"
+mautic.email.open.limittocategories="Limit to these categories"
+mautic.email.open.limittocategories_descr="Only apply if the emails are opened from selected categories. If none are selected, any email opened will be applicable."
+mautic.email.open.execute.first="One time"
+mautic.email.open.execute.each="For each e-mail"
 mautic.email.permissions.emails="Emails - User has access to"
 mautic.email.permissions.header="Email Permissions"
 mautic.email.plaintext.generate="Auto Generate"
