Slot Email | YouTube Thumbnail

--- a/app/bundles/CoreBundle/Translations/en_US/messages.ini
+++ b/app/bundles/CoreBundle/Translations/en_US/messages.ini
@@ -470,6 +470,7 @@ mautic.core.slot.types="Slot types"
 mautic.core.section.types="Section types"
 mautic.core.separator.color="Separator color"
 mautic.core.separator.thickness="Separator thickness"
+mautic.core.slot.label.video="YouTube Thumbnail"
 mautic.core.video.url="Video URL on YouTube"
 mautic.core.video.color.light="Light"
 mautic.core.video.color.dark="Dark"
