--- a/app/bundles/QueueBundle/Translations/en_US/messages.ini
+++ b/app/bundles/QueueBundle/Translations/en_US/messages.ini
@@ -7,6 +7,7 @@ mautic.queue.config.port.tooltip="The port that the server is listening on"
 mautic.queue.config.protocol.disabled="Disabled"
 mautic.queue.config.protocol.rabbitmq="RabbitMQ"
 mautic.queue.config.protocol.beanstalkd="Beanstalkd"
+mautic.queue.config.protocol.enqueue="Enqueue"
 mautic.queue.config.protocol="Queue Protocol"
 mautic.queue.config.protocol.tooltip="This is an advanced setup allowing a work queue/message broker to process page hits and email tokens outside of the web request. The work queue/message broker must be configured and running outside of Mautic for this to function."
 mautic.queue.config.rabbitmq.password="Password"
@@ -17,3 +18,29 @@ mautic.queue.config.rabbitmq.vhost="Virtual Host"
 mautic.queue.config.rabbitmq.vhost.tooltip="The virtual host to use for this RabbitMQ server"
 mautic.config.tab.queueconfig="Queue Settings"
 mautic.config.tab.queue_settings="Queue Settings"
+mautic.queue.config.enqueue_dsn="Transport DSN (find more transports here https://github.com/php-enqueue/enqueue-dev/tree/0.8)"
+mautic.queue.config.enqueue_dsn.tooltip="Default 'file:' transport stores messages in /tmp/enqueue folder"
+mautic.queue.config.enqueue_doctrine_ping_connection_extension.enabled="Enable doctrine ping connection extension"
+mautic.queue.config.enqueue_doctrine_ping_connection_extension.enabled.tooltip="Checks doctrine connection status before receive message"
+mautic.queue.config.enqueue_doctrine_clear_identity_map_extension.enabled="Enable doctrine clear identity map extension"
+mautic.queue.config.enqueue_doctrine_clear_identity_map_extension.enabled.tooltip="Clear doctrine identity map on each message receive"
+mautic.queue.config.enqueue_signal_extension.enabled="Enable signal extension"
+mautic.queue.config.enqueue_signal_extension.enabled.tooltip="Signal extension"
+mautic.queue.config.enqueue_reply_extension.enabled="Enable reply extension"
+mautic.queue.config.enqueue_reply_extension.enabled.tooltip="Reply extension"
+mautic.queue.config.enqueue_consumption_idle_timeout="Consumer idle timeout"
+mautic.queue.config.enqueue_consumption_idle_timeout.tooltip="The time in milliseconds queue consumer waits if no message received"
+mautic.queue.config.enqueue_consumption_receive_timeout="Consumer receive timeout"
+mautic.queue.config.enqueue_consumption_receive_timeout.tooltip="The time in milliseconds queue consumer waits for a message (100 ms by default)"
+mautic.queue.config.enqueue_client_prefix="Client prefix"
+mautic.queue.config.enqueue_client_prefix.tooltip="Client prefix"
+mautic.queue.config.enqueue_client_app_name="Client app name"
+mautic.queue.config.enqueue_client_app_name.tooltip="Client app name"
+mautic.queue.config.enqueue_client_router_topic="Client router topic"
+mautic.queue.config.enqueue_client_router_topic.tooltip="Client router topic"
+mautic.queue.config.enqueue_client_router_queue="Client router queue"
+mautic.queue.config.enqueue_client_router_queue.tooltip="Client router queue"
+mautic.queue.config.enqueue_client_default_processor_queue="Default processor queue"
+mautic.queue.config.enqueue_client_default_processor_queue.tooltip="Default processor queue"
+mautic.queue.config.enqueue_client_redelivered_delay_time="Redelivered delay time"
+mautic.queue.config.enqueue_client_redelivered_delay_time.tooltip="Redelivered delay time"
