Slot for Email | Signature

--- a/app/bundles/CoreBundle/Translations/en_US/messages.ini
+++ b/app/bundles/CoreBundle/Translations/en_US/messages.ini
@@ -470,6 +470,16 @@ mautic.core.slot.types="Slot types"
 mautic.core.section.types="Section types"
 mautic.core.separator.color="Separator color"
 mautic.core.separator.thickness="Separator thickness"
+mautic.core.slot.label.signature="Signature"
+mautic.core.signature.image="Image URL"
+mautic.core.signature.name="Name"
+mautic.core.signature.bio="Job Bio and Company Name"
+mautic.core.signature.mobile="Mobile"
+mautic.core.signature.site="Site"
+mautic.core.signature.email="Email"
+mautic.core.signature.contrast="Contrast Color"
+mautic.core.signature.neutral="Neutral Color"
+mautic.core.signature.link="Link Color"
 mautic.core.drag.info="Drag the type to the desired position."
 mautic.core.customize.slot="Customize Slot"
 mautic.core.customize.section="Customize Section"
