--- a/app/bundles/CoreBundle/Translations/en_US/messages.ini
+++ b/app/bundles/CoreBundle/Translations/en_US/messages.ini
@@ -72,6 +72,8 @@ mautic.core.config.cors.restrict.domains="Restrict Domains"
 mautic.core.config.cors.restrict.domains.tooltip="Would you like to restrict the domains that can send CORS requests to your Mautic installation?"
 mautic.core.config.cors.valid.domains="Valid Domains"
 mautic.core.config.cors.valid.domains.tooltip="Enter the domains (http://yourdomain.com), one per line, to which you'd like to restrict incoming CORS requests."
+mautic.core.config.disable_search_until_enter = "Disable Ajax Search Suggestions"
+mautic.core.config.disable_search_until_enter.tooltip = "Wait until the user hits enter before performing a background ajax search."
 mautic.core.config.form.cache.path="Path to the cache directory"
 mautic.core.config.form.cache.path.tooltip="Set the absolute path to the cache directory. %kernel.root_dir% can be used as a placeholder to the app directory in the public web root. It is advised to use a directory outside of the public web root to prevent the cache from being accessible by the public."
 mautic.core.dir.not.accesssible="%dir% is not accessible"
