--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -144,6 +144,7 @@ mautic.email.config.mailer_transport.mail="PHP Mail"
 mautic.email.config.mailer_transport.mandrill="Mandrill"
 mautic.email.config.mailer_transport.mailjet="Mailjet"
 mautic.email.config.mailer_transport.postmark="Postmark"
+mautic.email.config.mailer_transport.pepipost="Pepipost - SMTP"
 mautic.email.config.mailer_transport.sendgrid="Sendgrid - SMTP"
 mautic.email.config.mailer_transport.sendgrid_api="Sendgrid - API"
 mautic.email.config.mailer_transport.elasticemail="Elastic Email"
