--- a/plugins/MauticCrmBundle/Translations/en_US/messages.ini
+++ b/plugins/MauticCrmBundle/Translations/en_US/messages.ini
@@ -72,6 +72,7 @@ mautic.connectwise.form.objects_to_pull_from="Choose modules to pull data from"
 mautic.pipedrive.form.objects_to_pull_from="Enable Mautic / Pipedrive objects integration"
 mautic.pipedrive.object.contacts="Contacts / Person"
 mautic.pipedrive.object.organization="Company / Organization"
+mautic.pipedrive.form.activityEvents="Activities to sync to Pipedrive"
 mautic.pipedrive.api_url="Pipedrive URL"
 mautic.pipedrive.token="Pipedrive Token"
 mautic.pipedrive.webhook_user="Webhook user"
@@ -93,6 +94,9 @@ mautic.salesforce.form.blanks="Sync blank values with values populated from eith
 mautic.salesforce.form.activity_included_events="Events to include in the activity sync"
 mautic.salesforce.form.activity.events.tooltip="Select the events that will be sent to the integration as activity."
 mautic.connectwise.activity.name="Activity Name"
+mautic.salesforce.error.opt-out_permission.header = "Incorrect SalesForce permissions."
+mautic.salesforce.error.opt-out_permission.message = 'It appears you have not configured your SalesForce permissions correctly.<br/>
+<a href = "https://help.salesforce.com/articleView?id=000214338&language=en_US&type=1" target="_blank">Click here to learn more.</a>'
 mautic.plugin.integration.campaigns.connectwise.activity.type="Activity Type"
 mautic.plugin.integration.campaigns.connectwise.members="Assign to member"
 mautic.plugin.config.push.activities="Push contact activities"
