Added javascript to clear notifications on notifications index, added javascript to hide the 'New' button. Sorting by column works now.

--- a/app/bundles/CoreBundle/Translations/en_US/messages.ini
+++ b/app/bundles/CoreBundle/Translations/en_US/messages.ini
@@ -477,6 +477,7 @@ mautic.core.customize.slot="Customize Slot"
 mautic.core.customize.section="Customize Section"
 mautic.core.slot.customize.info="Select the slot to customize"
 mautic.core.section.customize.info="Select the section to customize"
+mautic.core.read="Read"
 mautic.core.left="Left"
 mautic.core.right="Right"
 mautic.core.center="Center"
