Filters now work for Notifications index page, added mautic.core.header and mautic.core.message to en_US translation

--- a/app/bundles/CoreBundle/Translations/en_US/messages.ini
+++ b/app/bundles/CoreBundle/Translations/en_US/messages.ini
@@ -554,3 +554,5 @@ mautic.core.daterange.month = "1 Month|%count% Months"
 mautic.core.daterange.year = "1 Year|%count% Years"
 mautic.core.config.form.default.daterange_default = "Date Range Filter Default"
 mautic.core.config.form.default.daterange_default.tooltip = "The default range to go back from current date/time on all Date Filters. This is overriden by the current user session last used values"
+mautic.core.header="Header"
+mautic.core.message="Message"
