add default bcc

--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -97,6 +97,8 @@ mautic.email.config.mailer.encryption.tooltip="Set the encryption type used by t
 mautic.email.config.mailer.encryption="SMTP encryption type"
 mautic.email.config.mailer.from.email.tooltip="Set the from email for email sent by Mautic"
 mautic.email.config.mailer.from.email="E-mail address to send mail from"
+mautic.email.config.mailer.bcc.email.tooltip="Set the bcc email for email sent by Mautic"
+mautic.email.config.mailer.bcc.email="E-mail address to bcc mail to"
 mautic.email.config.mailer.from.name.tooltip="Set the from name for email sent by Mautic"
 mautic.email.config.mailer.from.name="Name to send mail as"
 mautic.email.config.mailer.host.tooltip="Set the host for mail server"
