control unsubscribe header send

--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -103,6 +103,8 @@ mautic.email.config.mailer.host.tooltip="Set the host for mail server"
 mautic.email.config.mailer.host="Host"
 mautic.email.config.mailer.is.owner.tooltip="If a contact owner is known, force his/her email and name as sender email and name"
 mautic.email.config.mailer.is.owner="Mailer is owner"
+mautic.email.config.disable.unsubscribe.header.tooltip="Should disable sending of List-Unsubscribe header"
+mautic.email.config.disable.unsubscribe.header="Disable unsubscribe header"
 mautic.email.config.mailer.password.tooltip="Set the password required to authenticate the selected mail service"
 mautic.email.config.mailer.password="Password for the selected mail service"
 mautic.email.config.mailer.port.tooltip="Set the port for the mail server"
