enable unlimited send of marketing emails

--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -107,6 +107,8 @@ mautic.email.config.mailer.password.tooltip="Set the password required to authen
 mautic.email.config.mailer.password="Password for the selected mail service"
 mautic.email.config.mailer.port.tooltip="Set the port for the mail server"
 mautic.email.config.mailer.port="Port"
+mautic.email.config.email.unlimited.marketing.tooltip="Enble marketing emails to be able to be sent unlimited number of times"
+mautic.email.config.email.unlimited.marketing="No marketing emails limit"
 mautic.email.config.mailer.return.path.tooltip="Set a custom return path/bounce email for emails sent from the system. Note that some mail transports, such as Gmail, will not support this."
 mautic.email.config.mailer.return.path="Custom return path (bounce) address"
 mautic.email.config.mailer.spool.clear.timeout.tooltip="Sets the amount of time in seconds before deleting failed messages"
