--- a/app/bundles/PageBundle/Translations/en_US/messages.ini
+++ b/app/bundles/PageBundle/Translations/en_US/messages.ini
@@ -33,6 +33,8 @@ mautic.page.config.form.google.analytics="Analytics script (i.e. Google Analytic
 mautic.page.config.form.google.analytics.tooltip="Insert the analytics script to have it automatically included in the soure of landing pages."
 mautic.page.config.form.track_contact_by_ip="Identify visitors by IP"
 mautic.page.config.form.track_contact_by_ip.tooltip="If enabled, unidentified visitors with the same IP address as an existing contact will be tracked as that contact."
+mautic.page.config.form.disable_merge_identified_contacts="Disable merge identified contacts"
+mautic.page.config.form.disable_merge_identified_contacts.tooltip="If disabled, identified contacts will not be merged with current tracked contact. Identified contact will continue with own profile or new contact would be created."
 mautic.page.config.form.anonymize_ip="Anonymize IP"
 mautic.page.config.form.anonymize_ip.tooltip="The visitor's IP (192.168.0.144) will be both displayed and saved as 192.168.0.***"
 mautic.page.event.hit="Page hit"
