--- a/app/bundles/SmsBundle/Translations/en_US/messages.ini
+++ b/app/bundles/SmsBundle/Translations/en_US/messages.ini
@@ -54,8 +54,10 @@ mautic.sms.reply_pattern.tooltip="Type the pattern the reply must match in order
 mautic.sms.stats="Text Message Stats"
 mautic.sms.stats.report.table="Text Messages Sent"
 mautic.sms.stat.leadcount="%count% Pending"
-mautic.sms.stat.readcount="%count% Read"
+mautic.sms.stat.readcount="%count% (%ratio%%) Read"
 mautic.sms.stat.sentcount="%count% Sent"
+mautic.sms.stat.deliveredcount="%count% (%ratio%%) Delivered"
+mautic.sms.stat.failedcount="%count% (%ratio%%) Failed"
 
 mautic.sms.type.header="What type of sms do you want to create?"
 mautic.sms.type.list="List Text Messages"
@@ -98,6 +100,7 @@ mautic.sms.campaign.failed.not_contactable="Contact is not contactable on the SM
 mautic.sms.campaign.failed.missing_number="Missing phone number for contact."
 mautic.sms.campaign.failed.missing_entity="The specified SMS entity does not exist."
 mautic.sms.show.total.sent="Total sent"
+mautic.sms.stat.delivered="Delivered"
 mautic.sms.permissions.header="Text Message Permissions"
 mautic.sms.permissions.smses="Text Messages - User has access to"
 mautic.sms.list.frequency.number="Do not send text message more than"
