Add CampaignDeliverySubscriber Improve TransportSettings and TransportSettingsInterface

--- a/app/bundles/SmsBundle/Translations/en_US/messages.ini
+++ b/app/bundles/SmsBundle/Translations/en_US/messages.ini
@@ -2,6 +2,12 @@ mautic.campaign.sms.reply="Sends a text message"
 mautic.campaign.sms.reply.tooltip="Contact sent or replied to a text message"
 mautic.campaign.sms.send_text_sms="Send text message"
 mautic.campaign.sms.send_text_sms.tooltip="Sends a text/sms to the contact."
+mautic.campaign.sms.delivered="Delivered message"
+mautic.campaign.sms.delivered.tooltip="Message delivered to contact"
+mautic.campaign.sms.read="Read message"
+mautic.campaign.sms.read.tooltip="Message read by contact"
+mautic.campaign.sms.failed="Failed message"
+mautic.campaign.sms.failed.tooltip="Message failed to deliver to contact"
 mautic.lead.list.filter.dnc_bounced_sms="Bounced - SMS"
 mautic.lead.list.filter.dnc_unsubscribed_sms="Unsubscribed - SMS"
 mautic.lead.timeline.sms.sms.reply="Text message recevied from contact"
