Added {tracking_pixel} to the EmailBuilder

--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -375,6 +375,7 @@ mautic.email.token.webview_text.descr="Inserts a web view message and link."
 mautic.email.token.webview_text="Web View Text"
 mautic.email.token.webview_url.descr="Inserts only the web view URL."
 mautic.email.token.webview_url="Web View URL"
+mautic.email.token.tracking_pixel="Tracking Pixel"
 mautic.email.tokens.header="Tokens"
 mautic.email.tokens.help="Tokens are placeholders for featured objects. Just drag and drop the token into the editor to add it!"
 mautic.email.total="Total"
