Extend point action with tagging #4736

--- a/app/bundles/PointBundle/Translations/en_US/messages.ini
+++ b/app/bundles/PointBundle/Translations/en_US/messages.ini
@@ -40,3 +40,4 @@ mautic.points.menu.root="Points"
 mautic.point.dashboard.widgets="Point Widgets"
 mautic.widget.points.in.time="Points in time"
 mautic.point.changes="Point changes"
+mautic.point.action.tag="Add tag"
