--- a/app/bundles/LeadBundle/Translations/en_US/messages.ini
+++ b/app/bundles/LeadBundle/Translations/en_US/messages.ini
@@ -607,6 +607,8 @@ mautic.lead.webhook.event.lead.update="Contact Updated Event"
 mautic.lead.webhook.event.lead.update_desc="Triggered when a contact is updated."
 mautic.lead.webhook.event.lead.dnc="Contact Channel Subscription Change Event"
 mautic.lead.webhook.event.lead.dnc_desc="Triggered when a contact's channel subscription status changes."
+mautic.lead.webhook.event.company.new_or_update="Company Create/Update Event"
+mautic.lead.webhook.event.company.new_or_update_desc="Triggered when a company is created/updated"
 mautic.lead.campaign.event.field="Contact Field"
 mautic.lead.campaign.event.field_descr="Select the contact field which holds the value you want to compare."
 mautic.lead.campaign.event.device_type="Device type"
