--- a/app/bundles/FormBundle/Translations/en_US/messages.ini
+++ b/app/bundles/FormBundle/Translations/en_US/messages.ini
@@ -62,8 +62,8 @@ mautic.form.field.form.inputattr="Input attributes"
 mautic.form.field.form.label="Label"
 mautic.form.field.form.labelattr="Label attributes"
 mautic.form.field.form.lead_field="Matching contact field"
-mautic.form.field.form.skipIfExists="Skip if exists"
-mautic.form.field.form.skipIfExists.tooltip="Contact field value is not ovewrite"
+mautic.form.field.form.leadFieldNotOverwrite="If exist, not overwrite"
+mautic.form.field.form.leadFieldNotOverwrite.tooltip="Contact field value is not ovewrite If exists"
 mautic.form.field.form.multiple="Allow multiple?"
 mautic.form.field.form.property_buttontype="Button type"
 mautic.form.field.form.property_captcha="Captcha answer"
