--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -181,6 +181,8 @@ mautic.email.config.unsubscribe_message.tooltip="Set the default text for the me
 mautic.email.config.unsubscribe_message="Unsubscribed confirmation message"
 mautic.email.config.unsubscribe_text.tooltip="Set the default text for the {unsubscribe_text} token used in emails. Be sure to use the <code>|URL|</code> placeholder where the unsubscribe url is to be injected."
 mautic.email.config.unsubscribe_text="Text for the {unsubscribe_text} token"
+mautic.email.config.do_not_contact_text.tooltip="Set the default text for the {do_not_contact_text} token used in preference setting. Be sure to use the <code>|URL|</code> placeholder where the unsubscribe url is to be injected."
+mautic.email.config.do_not_contact_text="Text for the {do_not_contact_text} token"
 mautic.email.config.webview_text.tooltip="Set the default text for the {webview_text} token used in emails. Be sure to use the <code>|URL|</code> placeholder where the web view url is to be injected."
 mautic.email.config.webview_text="Text for the {webview_text} token"
 mautic.email.config.mailer.mailjet.sandbox="Sandbox mode"
@@ -387,6 +389,7 @@ mautic.email.type.template="Template Emails"
 mautic.email.unsubscribe.text="<a href='%link%'>Unsubscribe</a> to no longer receive emails from us."
 mautic.email.unsubscribe="Unsubscribe"
 mautic.email.unsubscribed.success="We are sorry to see you go! %email% will no longer receive emails from us. If this was by mistake, <a href='%resubscribeUrl%'>click here to re-subscribe</a>."
+mautic.email.do_not_contact.text="<a href='%link%'>Unsubscribe</a> from all marketing messages."
 mautic.email.urlvariant="Public Preview URL"
 mautic.email.preview.url="Preview URL"
 mautic.email.variant.misconfiguration="There is a mismatched configuration between variants. Please ensure all variants are configured with the same winner criteria."
@@ -429,6 +432,8 @@ mautic.email.config.show.contact.categories="Show contact's categories"
 mautic.email.config.show.contact.categories.tooltip="This will allow the contact to opt out of categories they belong to."
 mautic.email.config.show.contact.preferred.channels="Show contact's preferred channel option"
 mautic.email.config.show.contact.preferred.channels.tooltip="This will allow the contact to set their preferred channel; it will only show if there is more than one contact channels."
+mautic.email.config.show.contact.dnc="Show do not contact option"
+mautic.email.config.show.contact.dnc.tooltip="This will allow the contact to unsubscribe all channels from preferences center."
 mautic.lead.message.preferences="Message Preferences"
 mautic.lead.message.preferences.descr="Please use the form below to set your message preferences."
 mautic.report.group.emails="Emails"
