Added basic error handling

--- a/app/bundles/CoreBundle/Translations/en_US/messages.ini
+++ b/app/bundles/CoreBundle/Translations/en_US/messages.ini
@@ -230,7 +230,7 @@ mautic.core.id="ID"
 mautic.core.insert="Insert"
 mautic.core.ip_lookup.fetch_data="Fetch IP Lookup Data Store"
 mautic.core.ip_lookup.remote_fetch_error="Automatically fetching the IP lookup data failed. Download %remoteUrl%, extract if necessary, and upload to %localPath%."
-mautic.core.ip_lookup.remote_fetch_error_generic="Automatically fetching IP lookup data failed."
+mautic.core.ip_lookup.remote_fetch_error_generic="Automatically fetching IP lookup data failed. See the Mautic Log for further Details."
 mautic.core.ip_lookup.update_data="Update IP Lookup Data Store"
 mautic.core.ip_lookup.last_updated="Last updated on %date%"
 mautic.core.ipaddress="IP address"
