Add failed and refactor ReplyHelper to CallbackHelper

--- a/app/bundles/SmsBundle/Translations/en_US/messages.ini
+++ b/app/bundles/SmsBundle/Translations/en_US/messages.ini
@@ -61,6 +61,8 @@ mautic.sms.stat.leadcount="%count% Pending"
 mautic.sms.stat.readcount="%count% (%ratio%%) Read"
 mautic.sms.stat.sentcount="%count% Sent"
 mautic.sms.stat.deliveredcount="%count% (%ratio%%) Delivered"
+mautic.sms.stat.deliveredcount="%count% (%ratio%%) Delivered"
+mautic.sms.stat.failedcount="%count% (%ratio%%) Failed"
 
 mautic.sms.type.header="What type of sms do you want to create?"
 mautic.sms.type.list="List Text Messages"
