--- a/app/bundles/FormBundle/Translations/en_US/messages.ini
+++ b/app/bundles/FormBundle/Translations/en_US/messages.ini
@@ -221,8 +221,9 @@ mautic.config.tab.formconfig="Form Settings"
 mautic.form.field.type.donotsubmit="Domain name submission filter"
 mautic.form.config.form.do_not_submit_email="Do not accept submission from these domain names"
 mautic.form.config.form.do_not_submit_email.tooltip="Enter the emails, one per line, to which you would like to restrict form submission. You can filter a specific email address (email@yourdomain.com) or a whole domain name using wildcard (*domain.com)."
-mautic.form.field.form.conditions="Conditions"
-mautic.form.field.form.conditions.field.mapping="Show only If field has value"
-mautic.form.field.form.conditions.field.value=""
+mautic.form.field.form.condition="Condition"
+mautic.form.field.form.condition.enabled="Enabled"
+mautic.form.field.form.condition.field.mapping="Show only If field has value"
+mautic.form.field.form.condition.field.value=""
 mautic.form.field.form.dependency.label="Does this field depend on the entered value from another field?"
 mautic.form.field.form.dependent.field.mapping="Dependent Field Mapping"
