Added info about conditions to panel

--- a/app/bundles/FormBundle/Translations/en_US/messages.ini
+++ b/app/bundles/FormBundle/Translations/en_US/messages.ini
@@ -227,3 +227,5 @@ mautic.form.field.form.condition.field.mapping="Show only If field has value"
 mautic.form.field.form.condition.field.value=""
 mautic.form.field.form.dependency.label="Does this field depend on the entered value from another field?"
 mautic.form.field.form.dependent.field.mapping="Dependent Field Mapping"
+mautic.form.field.form.condition.show.on="Show If"
+mautic.form.field.form.condition.select.value="choose value"
