Start working on parent/child structure of conditional fields

--- a/app/bundles/FormBundle/Translations/en_US/messages.ini
+++ b/app/bundles/FormBundle/Translations/en_US/messages.ini
@@ -229,3 +229,4 @@ mautic.form.field.form.dependency.label="Does this field depend on the entered v
 mautic.form.field.form.dependent.field.mapping="Dependent Field Mapping"
 mautic.form.field.form.condition.show.on="Show If"
 mautic.form.field.form.condition.select.value="choose value"
+mautic.form.form.component.fields.conditional="Add new field based on selected value"
