Add support for Any selected value

--- a/app/bundles/FormBundle/Translations/en_US/messages.ini
+++ b/app/bundles/FormBundle/Translations/en_US/messages.ini
@@ -229,4 +229,5 @@ mautic.form.field.form.dependency.label="Does this field depend on the entered v
 mautic.form.field.form.dependent.field.mapping="Dependent Field Mapping"
 mautic.form.field.form.condition.show.on="Show only If choose from"
 mautic.form.field.form.condition.select.value="values"
+mautic.form.field.form.condition.any_value="Any selected value"
 mautic.form.form.component.fields.conditional="Add field based on selected value"
