--- a/app/bundles/FormBundle/Translations/en_US/messages.ini
+++ b/app/bundles/FormBundle/Translations/en_US/messages.ini
@@ -227,7 +227,7 @@ mautic.form.field.form.condition.field.mapping="Show only If field has value"
 mautic.form.field.form.condition.field.value=""
 mautic.form.field.form.dependency.label="Does this field depend on the entered value from another field?"
 mautic.form.field.form.dependent.field.mapping="Dependent Field Mapping"
-mautic.form.field.form.condition.show.on="Show only If choose from"
+mautic.form.field.form.condition.show.on="Show only if choose from"
 mautic.form.field.form.condition.select.value="values"
 mautic.form.field.form.condition.any_value="Any selected value"
 mautic.form.form.component.fields.conditional="Add field based on selected value"
