--- a/plugins/MauticFocusBundle/Translations/en_US/messages.ini
+++ b/plugins/MauticFocusBundle/Translations/en_US/messages.ini
@@ -45,7 +45,7 @@ mautic.focus.form.primary_color = "Primary color"
 mautic.focus.form.style = "What style should be used?"
 mautic.focus.form.tagline = "Tagline"
 mautic.focus.form.text_color = "Text color"
-mautic.focus.form.type.form_description = "Use a Mautic form to collect data from the visitor."
+mautic.focus.form.type.form_description = "Use a MarTech form to collect data from the visitor."
 mautic.focus.form.type.form = "Collect data"
 mautic.focus.form.type.link_description = "Get visitors to click through to a specific URL."
 mautic.focus.form.type.link = "Emphasize a link"
@@ -58,7 +58,7 @@ mautic.focus.form.html_mode = "Content mode"
 mautic.focus.form.basic="Basic"
 mautic.focus.form.editor="Editor"
 mautic.focus.form.html="HTML"
-mautic.focus.form.website.tooltip = "Enter your website for Mautic to grab a screenshot and display an example."
+mautic.focus.form.website.tooltip = "Enter your website for MarTech to grab a screenshot and display an example."
 mautic.focus.form.website = "Website"
 mautic.focus.form.when.5seconds = "5 second delay"
 mautic.focus.form.when.immediately = "Upon arrival"
@@ -74,7 +74,7 @@ mautic.focus.graph.clicks = "Clicks"
 mautic.focus.graph.stats = "Focus Stats"
 mautic.focus.graph.submissions = "Submissions"
 mautic.focus.graph.views = "Views"
-mautic.focus.install.description = "Copy this line of code into your site, preferably right before the closing body tag. Alternatively show this focus item through a campaign action in response to a page view on a page which has the Mautic tracking script."
+mautic.focus.install.description = "Copy this line of code into your site, preferably right before the closing body tag. Alternatively show this focus item through a campaign action in response to a page view on a page which has the MarTech tracking script."
 mautic.focus.install.header = "Focus Installation"
 mautic.focus.new = "New Focus"
 mautic.focus.noresults.tip = "Get the attention of visitors on your website with Focus Forms, Focus Clicks, or Focus Notifications."
