Sostituiti altri mautic con martech

--- a/app/bundles/ConfigBundle/Translations/en_US/messages.ini
+++ b/app/bundles/ConfigBundle/Translations/en_US/messages.ini
@@ -14,6 +14,6 @@ mautic.sysinfo.writable="Writable"
 mautic.sysinfo.unwritable="Unwritable"
 mautic.sysinfo.tab.log="Log"
 mautic.sysinfo.log.title="Current Error Log"
-mautic.sysinfo.log.missing="Today's MarTech error log is empty. Check server error log for error messages Mautic didn't have a chance to catch."
+mautic.sysinfo.log.missing="Today's MarTech error log is empty. Check server error log for error messages MarTech didn't have a chance to catch."
 mautic.sysinfo.phpinfo.missing="Information is not available. PHP function phpinfo() is disabled on your server."
 mautic.sysinfo.phpinfo.phpversion="PHP function phpinfo() is disabled on your server. Your PHP version is <b>%phpversion%</b>."
