--- a/app/bundles/EmailBundle/Translations/en_US/messages.ini
+++ b/app/bundles/EmailBundle/Translations/en_US/messages.ini
@@ -435,6 +435,6 @@ mautic.report.group.emails="Emails"
 mautic.email.campaign.event.reply="Replies to email"
 mautic.email.campaign.event.reply_descr="Trigger action when contact replies to an email"
 mautic.email.config.monitored_email.reply_folder="Contact Replies"
-mautic.email.stat.tooltip="Details may not match summary numbers if the contact no longer exists in your Mautic Account or if a contact was sent or read an email multiple times"
+mautic.email.stat.tooltip="Details may not match summary numbers if the contact no longer exists in your MarTech Account or if a contact was sent or read an email multiple times"
 mautic.email.stat.simple.tooltip="Details may not match summary numbers if the contact no longer exists in your MarTech Account"
 mautic.email.associated.contacts="Contacts"
