--- a/app/bundles/PageBundle/Translations/en_US/messages.ini
+++ b/app/bundles/PageBundle/Translations/en_US/messages.ini
@@ -90,7 +90,7 @@ mautic.page.point.action.form.returns.within.descr="Change points based on if th
 mautic.page.point.action.pagehit="Visits a landing page"
 mautic.page.point.action.pagehit_descr="Change the contact's points after visiting a landing page."
 mautic.page.point.action.urlhit="Visits specific URL"
-mautic.page.point.action.urlhit_descr="Change the contact's points after visiting a specific URL where Mautic tracking pixel is loaded."
+mautic.page.point.action.urlhit_descr="Change the contact's points after visiting a specific URL where MarTech tracking pixel is loaded."
 mautic.page.preview.url="Public Preview URL"
 mautic.page.publish.down="Publish Down"
 mautic.page.publish.up="Publish Up"
