--- a/app/bundles/FormBundle/Translations/en_US/messages.ini
+++ b/app/bundles/FormBundle/Translations/en_US/messages.ini
@@ -223,11 +223,13 @@ mautic.form.config.form.do_not_submit_email="Do not accept submission from these
 mautic.form.config.form.do_not_submit_email.tooltip="Enter the emails, one per line, to which you would like to restrict form submission. You can filter a specific email address (email@yourdomain.com) or a whole domain name using wildcard (*domain.com)."
 mautic.form.field.form.condition="Condition"
 mautic.form.field.form.condition.enabled="Enabled"
-mautic.form.field.form.condition.field.mapping="Show only If field has value"
+mautic.form.field.form.condition.show.only="Show only on select values"
 mautic.form.field.form.condition.field.value=""
 mautic.form.field.form.dependency.label="Does this field depend on the entered value from another field?"
 mautic.form.field.form.dependent.field.mapping="Dependent Field Mapping"
-mautic.form.field.form.condition.show.on="Show only if choose from"
+mautic.form.field.form.condition.show.on="Show only if selection from"
 mautic.form.field.form.condition.select.value="values"
-mautic.form.field.form.condition.any_value="Any selected value"
+mautic.form.field.form.condition.any_value="Any value"
 mautic.form.form.component.fields.conditional="Add field based on selected value"
+mautic.form.field.form.condition.select_one_of="select one of"
+mautic.form.field.form.condition.select_other_thatn="select other than"
