--- a/app/bundles/UserBundle/Translations/en_US/messages.ini
+++ b/app/bundles/UserBundle/Translations/en_US/messages.ini
@@ -9,7 +9,7 @@ mautic.user.account.settings="Account"
 mautic.user.auth.error.invalidlogin="Invalid login. Please verify credentials."
 mautic.user.auth.expired.header="Session expired - please login"
 mautic.user.auth.form.loginbtn="login"
-mautic.user.auth.form.loginusername="Username or email"
+mautic.user.auth.form.loginusername="Username"
 mautic.user.auth.form.rememberme="keep me logged in"
 mautic.user.auth.form.rolename="Role Name"
 mautic.user.auth.header="Please Login"
